<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GPSLocatorActivity!</string>
    <string name="app_name">GPSLocator</string>
     <string name="header">GPSDecrypter System</string>
      <string name="breaker">-----------------------------</string>
       <string name="showmap">Show Map</string>
        <string name="lati">Latitude</string>
         <string name="longi">Longitude</string>

</resources>